# hexlet-my-first-workflow

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: say_hello.py
